# pg_iban

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.integration  Makefile  README.md  def.h  pg_iban--1.0--1.1.sql  pg_iban--1.0.sql  pg_iban--1.1.sql  pg_iban.c  pg_iban.control  pg_iban_bban.c  pg_iban_bban.h  pg_iban_clean.c  pg_iban_clean.h  pg_iban_country.c  pg_iban_country.h  pg_iban_format.c  pg_iban_format.h  pg_iban_preprocess.c  pg_iban_preprocess.h  pg_iban_validate.c  pg_iban_validate.h  test_pg_iban.c
.github/workflows/: test.yml
integration_tests/: 01_create_database.sql  02_integration_tests.sql  run_tests.sh
